--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Backtaleen Landing Page</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <script src="https://kit.fontawesome.com/9f143d8525.js" crossorigin="anonymous"></script>
 </head>
 
