--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Nav -->
         <div class="nav">
             <div class="logo">
-                <img src="/img/logo.png" alt="Logo">
+                <img src="./img/logo.png" alt="Logo">
             </div>
             <div class="menu">
                 <ul>
@@ -53,7 +53,7 @@
 
 
     <section>
-        <img src="/img/family.jpg" alt="" width="100%" >
+        <img src="./img/family.jpg" alt="" width="100%" >
         <h2>Créditos y reconocimientos.</h2>
         
         <p class="main-text">Hemos sometido a Bactakleen a las más rigurosas pruebas
@@ -76,7 +76,7 @@
             bacterias y los virus. ¡Este es el complemento perfecto al tratamiento con el Ultra Mist!</p>
     </section>
     <section>
-        <img src="/img/mano.jpg" alt="" width="100%">
+        <img src="./img/mano.jpg" alt="" width="100%">
         <h2>Unete a nuestro Equipo</h2>
         
         <p class="main-text">Si te suena interesante formar parte del equipo de Bactakleen como un
